feat: implement payment service with VNPay integration, entity models, and order status tracking