@@ -12,6 +12,7 @@ import com.example.cyclemartberemake.repository.PointTransactionRepository;
 import com.example.cyclemartberemake.repository.UserRepository;
 import com.example.cyclemartberemake.repository.PostPrioritySubscriptionRepository;
 import com.example.cyclemartberemake.repository.InspectionRepository;
+import com.example.cyclemartberemake.repository.SellerRatingRepository;
 import com.example.cyclemartberemake.service.PaymentNotificationService;
 import com.example.cyclemartberemake.service.PaymentService;
 import com.example.cyclemartberemake.service.UserService;
@@ -34,6 +35,8 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -50,6 +53,7 @@ public class PaymentServiceImpl implements PaymentService {
     private final InspectionRepository inspectionRepository;
     private final PointTransactionRepository pointTransactionRepository;
     private final RealtimeNotificationService realtimeNotificationService;
+    private final SellerRatingRepository sellerRatingRepository;
 
     @Value("${vnpay.tmnCode}")
     private String vnpayTmnCode;
@@ -83,13 +87,22 @@ public class PaymentServiceImpl implements PaymentService {
 
         BikePost bikePost = null;
 
+        // DIRECT_PAYMENT (COD) đi qua createDirectPayment riêng, không dùng VNPay
+        if (paymentType == PaymentType.DIRECT_PAYMENT) {
+            throw new RuntimeException("Đơn hàng COD vui lòng dùng endpoint /api/v1/payments/direct");
+        }
+
         // Chỉ gán bikePost vào Payment nếu KHÔNG PHẢI là Mua Gói và KHÔNG PHẢI là Kiểm định.
         if (request.getBikePostId() != null
                 && paymentType != PaymentType.PRIORITY_PACKAGE
                 && paymentType != PaymentType.INSPECTION_FEE) {
             bikePost = bikePostRepository.findById(request.getBikePostId())
                     .orElseThrow(() -> new RuntimeException("Bài đăng không tồn tại"));
-            
+
+            // Xe chưa kiểm định chỉ được mua COD, không qua VNPay
+            if (paymentType == PaymentType.ORDER_PAYMENT && !Boolean.TRUE.equals(bikePost.getIsVerified())) {
+                throw new RuntimeException("Xe chưa được kiểm định chỉ hỗ trợ thanh toán tiền mặt (COD). Vui lòng dùng tính năng đặt hàng COD.");
+            }
         }
 
         Long amount = request.getAmount();
@@ -153,12 +166,13 @@ public class PaymentServiceImpl implements PaymentService {
         // Lấy tất cả giao dịch của user
         Page<Payment> payments = paymentRepo.findByUserIdOrderByCreatedAtDesc(userId, pageable);
 
-        // Lọc: CHỈ giữ lại các giao dịch mua xe (ORDER_PAYMENT)
+        // Lọc: CHỈ giữ lại các giao dịch mua xe (ORDER_PAYMENT + DIRECT_PAYMENT)
         List<PaymentResponse> filteredList = payments.getContent().stream()
-                .filter(p -> p.getType() == PaymentType.ORDER_PAYMENT)
+                .filter(p -> p.getType() == PaymentType.ORDER_PAYMENT || p.getType() == PaymentType.DIRECT_PAYMENT)
                 .map(paymentMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
 
+        enrichWithHasRated(filteredList);
         return new org.springframework.data.domain.PageImpl<>(filteredList, pageable, payments.getTotalElements());
     }
 
@@ -166,7 +180,11 @@ public class PaymentServiceImpl implements PaymentService {
     public Page<PaymentResponse> getPaymentHistoryAsSeller(Pageable pageable) {
         Long sellerId = getCurrentUserId();
         Page<Payment> payments = paymentRepo.findBySellerIdOrderByCreatedAtDesc(sellerId, pageable);
-        return payments.map(paymentMapper::toResponse);
+        List<PaymentResponse> list = payments.getContent().stream()
+                .map(paymentMapper::toResponse)
+                .collect(Collectors.toList());
+        enrichWithHasRated(list);
+        return new org.springframework.data.domain.PageImpl<>(list, pageable, payments.getTotalElements());
     }
 
     @Override
@@ -175,9 +193,9 @@ public class PaymentServiceImpl implements PaymentService {
         PaymentStatus paymentStatus = PaymentStatus.valueOf(status.toUpperCase());
         Page<Payment> payments = paymentRepo.findByUserIdAndStatusOrderByCreatedAtDesc(userId, paymentStatus, pageable);
 
-        //  chỉ hiện giao dịch mua xe trong lịch sử đơn hàng
+        // chỉ hiện giao dịch mua xe trong lịch sử đơn hàng
         List<PaymentResponse> filteredList = payments.getContent().stream()
-                .filter(p -> p.getType() == PaymentType.ORDER_PAYMENT)
+                .filter(p -> p.getType() == PaymentType.ORDER_PAYMENT || p.getType() == PaymentType.DIRECT_PAYMENT)
                 .map(paymentMapper::toResponse)
                 .toList();
 
@@ -436,7 +454,10 @@ public class PaymentServiceImpl implements PaymentService {
         LocalDateTime now = LocalDateTime.now();
         payment.setOrderStatus(OrderStatus.DELIVERED);
         payment.setDeliveredAt(now);
-        payment.setAutoReleaseAt(now.plusDays(7));
+        // autoReleaseAt chỉ dùng cho escrow online, không áp dụng cho COD
+        if (payment.getType() != PaymentType.DIRECT_PAYMENT) {
+            payment.setAutoReleaseAt(now.plusDays(7));
+        }
         paymentRepo.save(payment);
 
         Long sellerId = payment.getBikePost() != null && payment.getBikePost().getUser() != null ? payment.getBikePost().getUser().getId() : null;
@@ -556,6 +577,166 @@ public class PaymentServiceImpl implements PaymentService {
         return generateVNPayUrl(orderId, amount);
     }
 
+    @Override
+    @Transactional
+    public PaymentResponse createDirectPayment(Long buyerId, Long bikePostId, String address, String description) {
+        Users buyer = userRepository.findById(buyerId)
+                .orElseThrow(() -> new RuntimeException("Người mua không tồn tại"));
+        BikePost bikePost = bikePostRepository.findById(bikePostId)
+                .orElseThrow(() -> new RuntimeException("Bài đăng không tồn tại"));
+
+        if (bikePost.getIsVerified()) {
+            throw new RuntimeException("Xe đã kiểm định phải thanh toán online (escrow)");
+        }
+
+        Users seller = bikePost.getUserId() != null
+                ? userRepository.findById(bikePost.getUserId()).orElse(null)
+                : null;
+
+        String orderId = "COD_" + System.currentTimeMillis();
+        String desc = description != null ? description : "Mua xe COD - " + orderId;
+
+        Payment payment = Payment.builder()
+                .user(buyer)
+                .seller(seller)
+                .bikePost(bikePost)
+                .orderId(orderId)
+                .amount(bikePost.getPrice().longValue())
+                .description(desc)
+                .status(PaymentStatus.PENDING)
+                .type(PaymentType.DIRECT_PAYMENT)
+                .orderStatus(OrderStatus.PENDING_SELLER_CONFIRMATION)
+                .address(address)
+                .sellerConfirmationDeadline(LocalDateTime.now().plusMinutes(1))
+                .build();
+
+        paymentRepo.save(payment);
+
+        // Notify seller
+        if (seller != null) {
+            realtimeNotificationService.notifyOrderStatusChange(
+                    buyerId, seller.getId(), payment.getId(), OrderStatus.PENDING_SELLER_CONFIRMATION.name());
+            notificationService.sendRealTimeNotification(seller.getId(),
+                    "Bạn có đơn hàng COD mới cần xác nhận trong 24h! Mã đơn: " + orderId, "NEW_COD_ORDER");
+        }
+
+        log.info("Created DIRECT_PAYMENT order {} for bikePost {}", orderId, bikePostId);
+        return paymentMapper.toResponse(payment);
+    }
+
+    @Override
+    @Transactional
+    public PaymentResponse sellerConfirmOrder(Long paymentId, Long sellerId) {
+        Payment payment = paymentRepo.findById(paymentId)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn hàng"));
+
+        if (payment.getBikePost() == null || !payment.getBikePost().getUserId().equals(sellerId)) {
+            throw new RuntimeException("Bạn không phải người bán của đơn hàng này");
+        }
+
+        if (payment.getType() != PaymentType.DIRECT_PAYMENT) {
+            throw new RuntimeException("Chỉ áp dụng cho đơn COD");
+        }
+
+        if (payment.getOrderStatus() != OrderStatus.PENDING_SELLER_CONFIRMATION) {
+            throw new RuntimeException("Đơn hàng không ở trạng thái chờ xác nhận");
+        }
+
+        // COD: không có tiền qua platform, seller tự giao + tự thu tiền mặt
+        payment.setOrderStatus(OrderStatus.IN_DELIVERY);
+        // PaymentStatus giữ PENDING — đây chỉ là record tracking, không phải giao dịch online
+
+        // Mark post as sold
+        BikePost post = payment.getBikePost();
+        post.setPostStatus(PostStatus.SOLD);
+        bikePostRepository.save(post);
+
+        paymentRepo.save(payment);
+
+        Long buyerId = payment.getUser() != null ? payment.getUser().getId() : null;
+        realtimeNotificationService.notifyOrderStatusChange(buyerId, sellerId, paymentId, OrderStatus.IN_DELIVERY.name());
+        notificationService.sendRealTimeNotification(buyerId,
+                "Seller đã xác nhận đơn hàng " + payment.getOrderId() + "! Seller sẽ liên hệ và giao hàng trực tiếp, vui lòng chuẩn bị tiền mặt.", "COD_ORDER_CONFIRMED");
+
+        log.info("Seller {} confirmed COD order {}", sellerId, payment.getOrderId());
+        return paymentMapper.toResponse(payment);
+    }
+
+    @Override
+    @Transactional
+    public PaymentResponse sellerRejectOrder(Long paymentId, Long sellerId, String reason) {
+        Payment payment = paymentRepo.findById(paymentId)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn hàng"));
+
+        if (payment.getBikePost() == null || !payment.getBikePost().getUserId().equals(sellerId)) {
+            throw new RuntimeException("Bạn không phải người bán của đơn hàng này");
+        }
+
+        if (payment.getType() != PaymentType.DIRECT_PAYMENT) {
+            throw new RuntimeException("Chỉ áp dụng cho đơn COD");
+        }
+
+        if (payment.getOrderStatus() != OrderStatus.PENDING_SELLER_CONFIRMATION) {
+            throw new RuntimeException("Đơn hàng không ở trạng thái chờ xác nhận");
+        }
+
+        payment.setOrderStatus(OrderStatus.CANCELLED);
+        payment.setStatus(PaymentStatus.CANCELLED);
+        payment.setSellerRejectionReason(reason);
+
+        // Kiểm tra số lần từ chối trong tháng
+        LocalDateTime startOfMonth = LocalDateTime.now().withDayOfMonth(1).withHour(0).withMinute(0).withSecond(0);
+        long rejectionCount = paymentRepo.countSellerRejectionsThisMonth(sellerId, startOfMonth);
+        payment.setSellerRejectionCount((int) rejectionCount + 1);
+
+        paymentRepo.save(payment);
+
+        Long buyerId = payment.getUser() != null ? payment.getUser().getId() : null;
+        notificationService.sendRealTimeNotification(buyerId,
+                "Đơn hàng COD " + payment.getOrderId() + " đã bị từ chối. Lý do: " + reason, "COD_ORDER_REJECTED");
+
+        // Cảnh báo seller nếu từ chối quá 3 lần trong tháng
+        if (rejectionCount + 1 >= 3) {
+            notificationService.sendRealTimeNotification(sellerId,
+                    "Cảnh báo: Bạn đã từ chối " + (rejectionCount + 1) + " đơn hàng trong tháng này. Tài khoản có thể bị hạn chế.", "SELLER_REJECTION_WARNING");
+            log.warn("Seller {} has rejected {} orders this month - threshold exceeded", sellerId, rejectionCount + 1);
+        }
+
+        log.info("Seller {} rejected COD order {} - reason: {}", sellerId, payment.getOrderId(), reason);
+        return paymentMapper.toResponse(payment);
+    }
+
+    @Override
+    @Transactional
+    public void autoCancelExpiredSellerConfirmations() {
+        List<Payment> expiredOrders = paymentRepo.findExpiredSellerConfirmations(LocalDateTime.now());
+
+        for (Payment payment : expiredOrders) {
+            payment.setOrderStatus(OrderStatus.CANCELLED);
+            payment.setStatus(PaymentStatus.CANCELLED);
+            payment.setMessage("Tự động hủy: Seller không phản hồi trong 24h");
+            paymentRepo.save(payment);
+
+            Long buyerId = payment.getUser() != null ? payment.getUser().getId() : null;
+            Long sellerId = payment.getSeller() != null ? payment.getSeller().getId() : null;
+
+            if (buyerId != null) {
+                notificationService.sendRealTimeNotification(buyerId,
+                        "Đơn hàng COD " + payment.getOrderId() + " đã bị tự động hủy vì seller không phản hồi trong 24h.", "COD_AUTO_CANCELLED");
+            }
+            if (sellerId != null) {
+                notificationService.sendRealTimeNotification(sellerId,
+                        "Đơn hàng COD " + payment.getOrderId() + " đã bị tự động hủy do không phản hồi đúng hạn.", "COD_AUTO_CANCELLED");
+            }
+
+            log.info("Auto-cancelled expired COD order: {}", payment.getOrderId());
+        }
+
+        if (!expiredOrders.isEmpty()) {
+            log.info("Auto-cancelled {} expired COD seller confirmation(s)", expiredOrders.size());
+        }
+    }
+
     private void recordPointTransaction(Users user, Payment payment, PointTransactionType type,
                                         long delta, long balanceAfter, String note) {
         PointTransaction tx = PointTransaction.builder()
@@ -569,6 +750,14 @@ public class PaymentServiceImpl implements PaymentService {
         pointTransactionRepository.save(tx);
 
         realtimeNotificationService.notifyPointsChange(user.getId(), delta, balanceAfter, note);
+    }
+
+    private List<PaymentResponse> enrichWithHasRated(List<PaymentResponse> responses) {
+        if (responses.isEmpty()) return responses;
+        Set<Long> ids = responses.stream().map(PaymentResponse::getId).collect(Collectors.toSet());
+        Set<Long> ratedIds = sellerRatingRepository.findRatedPaymentIds(ids);
+        responses.forEach(r -> r.setHasRated(ratedIds.contains(r.getId())));
+        return responses;
     }
 
     private Long getCurrentUserId() {
